# C---C-plus-plus---R-programming

./: README.md
Data Structures and Algorithms (C++)/Level 1 - Warm Up/Level 1.a/: CMakeLists.txt  ephemerides.h  main.cpp  main_test.cpp  orbitalSim.cpp  orbitalSim.h  orbitalSimView.cpp  orbitalSimView.h
Data Structures and Algorithms (C++)/Level 1 - Warm Up/Level 1.b/: CMakeLists.txt  ephemerides.h  main.cpp  main_test.cpp  orbitalSim.cpp  orbitalSim.hpp  orbitalSimView.cpp  orbitalSimView.hpp
Data Structures and Algorithms (C++)/Level 2 - EDAPark/: CMakeLists.txt  Controller.cpp  Controller.h  MQTTClient.cpp  MQTTClient.h  View.cpp  View.h  main.cpp
Data Structures and Algorithms (C++)/Level 3 - Lequel/: CMakeLists.txt  CSVData.cpp  CSVData.h  LanguageIdentification.txt  Lequel.cpp  Lequel.h  Text.cpp  Text.h  main.cpp  main_test.cpp
Data Structures and Algorithms (C++)/Level 3 - Lequel/resources/: languagecode_names_es.csv
Data Structures and Algorithms (C++)/Level 3 - Lequel/resources/trigrams/: acu.csv  afr.csv  agr.csv  ake.csv  als.csv  amh.csv  amu.csv  arb.csv  arc.csv  bsn.csv  bul.csv  cak.csv  ceb.csv  ces.csv  cha.csv  chj.csv  chr.csv  cjp.csv  cmn.csv  cni.csv  cop.csv  dan.csv  deu.csv  dik.csv  dje.csv  djk.csv  dop.csv  ell.csv  eng.csv  epo.csv  est.csv  eus.csv  ewe.csv  fin.csv  fra.csv  gbi.csv  gla.csv  glv.csv  guj.csv  hat.csv  (+62 more)
Data Structures and Algorithms (C++)/Level 4 - EDA-Man/: CMakeLists.txt  CyanGhost.cpp  CyanGhost.h  EDAMan.cpp  EDAMan.h  GameModel.cpp  GameModel.h  GameView.cpp  GameView.h  Ghost.cpp  Ghost.h  MQTTClient.cpp  MQTTClient.h  OrangeGhost.cpp  OrangeGhost.h  PinkGhost.cpp  PinkGhost.h  PosicionesEnergizers.txt  RedGhost.cpp  RedGhost.h  Robot.cpp  Robot.h  main.cpp
Data Structures and Algorithms (C++)/Level 5 - DNATool/: CMakeLists.txt  Hirschberg.cpp  Hirschberg.h  Respuestas.txt  main.cpp  main_test.cpp
Data Structures and Algorithms (C++)/Level 5 - DNATool/resources/output/: MG1 vs Beta.txt  MG1 vs Delta.txt  MG1 vs Gamma.txt  MG1 vs Omicron BA1.txt  MG1 vs Omicron BA2.txt  MG1 vs Wuhan.txt  MG1 vs alpha.txt  MG2 vs Alpha.txt  MG2 vs Beta.txt  MG2 vs Delta.txt  MG2 vs Gamma.txt  MG2 vs Omicron BA1.txt  MG2 vs Omicron BA2.txt  MG2 vs Wuhan.txt  MG3 vs Alpha.txt  MG3 vs Beta.txt  MG3 vs Delta.txt  MG3 vs Gamma.txt  MG3 vs Omicron BA1.txt  MG3 vs Omicron BA2.txt  MG3 vs Wuhan.txt
Data Structures and Algorithms (C++)/Level 5 - DNATool/resources/reference/: Libia reference genome - MZ054877.txt
Data Structures and Algorithms (C++)/Level 6.1 - EDACup Technical Challenge/EDACUP_TC_grupo1/: CMakeLists.txt  Controller.cpp  Controller.h  MQTTClient2.cpp  MQTTClient2.h  README.md  Robot.cpp  Robot.h  main.cpp  signup.txt
Data Structures and Algorithms (C++)/Level 6.1 - EDACup Technical Challenge/__MACOSX/EDACUP_TC_grupo1/: ._MQTTClient2.cpp
Data Structures and Algorithms (C++)/Level 6.2 - EDACup Competition/EDACUP/: CMakeLists.txt  Controller.cpp  Controller.h  Goalie.cpp  Goalie.h  README.md  Robot.cpp  Robot.h  main.cpp
Data Structures and Algorithms (C++)/Level 7 - EDAoogle/: .gitignore  EDAoogleHttpRequestHandler.cpp  EDAoogleHttpRequestHandler.h  ReadMe.md
Learning Methodology (R)/TP1 - Introducción a R/: TP1_R.docx
Learning Methodology (R)/TP1 | Introducción a R/: TP1.R
Learning Methodology (R)/TP2 - Estadística descriptiva/: G1 - TP2.R
Learning Methodology (R)/TP2 | Estadística descriptiva/: Estadística_descriptiva.docx
Programming I (C)/Game of Life (John Conway)/: README.md
Programming I (C)/Game of Life (John Conway)/game_of_life_v1/: gameoflifev1.c
Programming I (C)/Game of Life (John Conway)/game_of_life_v2_Makefile/: Makefile  change_world.c  change_world.h  main.c  output.c  output.h  world_config.h
Programming I (C)/TP1 - Operadores/: ej6tp1.c  ej8tp1.c
Programming I (C)/TP10 - Tipos de datos avanzados y Argumentos variables/: main.c  puertos.h  teclado.h
Programming I (C)/TP10 | Tipos de datos avanzados y Argumentos variables/: makefile  mi_printf.c  mi_printf.h  puertos.c  teclado.c
Programming I (C)/TP2 - Flujo de Programa/: tp2ej6.c  tp2ej7.c
Programming I (C)/TP4 | Arreglos/: TP4 Arreglos (Nota 6).c
Programming I (C)/TP5 | Punteros/: TP5 Punteros (Nota 7).c
Programming I (C)/TP7 - Multiarchivo y Makefile/: cell.h  imprime.h  makefile.txt  teclado.c  teclado.h
Programming I (C)/TP7 | Multiarchivo y Makefile/: cell.c  compilacion.txt  imprime.c  main.c  size.h
Programming I (C)/TP8 - Punteros Avanzados/: info.h  main.c  makefile.txt  math.c  teclado.c  teclado.h
Programming I (C)/TP8 | Punteros Avanzados/: math.h
Programming I (C)/TPF - Frogger/Allegro Library Implementation/: allegro.c  allegro.h  obj.h
Programming I (C)/TPF - Frogger/Raspberry Pi 3 B+ Implementation/: obj.c  rana.c  rana.h  rpi_draw.c  rpi_funs.c
Programming I (C)/TPF | Frogger/Allegro Library Implementation/: colisiones.c  colisiones.h  makefile  obj.c
Programming I (C)/TPF | Frogger/Raspberry Pi 3 B+ Implementation/: colisiones.c  main.c  makefile  rpi_draw.h  rpi_funs.h
